--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,9 @@ notifications:
 script:
 - docker build -t gns3-gui-test .
 - docker run gns3-gui-test
-before_deploy:
-    pip install twine
+- sudo pip install twine
+#before_deploy:
+#    sudo pip install twine
 deploy:
   provider: pypi
   user: noplay
