--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,10 @@ image: Visual Studio 2017
 
 platform: x64
 
+on_finish:
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+
+
 environment:
     PYTHON: "C:\\Python36-x64"
     DISTUTILS_USE_SDK: "1"
